--- a/mobile-app-ws/pom.xml
+++ b/mobile-app-ws/pom.xml
@@ -47,6 +47,10 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<dependency>
+    <groupId>com.fasterxml.jackson.dataformat</groupId>
+    <artifactId>jackson-dataformat-xml</artifactId>
+</dependency>
 
 	<build>
 		<plugins>
