--- a/AppPhotoDiscovery/src/main/resources/application.properties
+++ b/AppPhotoDiscovery/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=8010
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
+eureka.instance.preferIpAddress=true
