--- a/AppPhotoDiscoveryUser/src/main/resources/application.properties
+++ b/AppPhotoDiscoveryUser/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=AppPhotoDiscoveryUser
 server.port=0
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
+eureka.instance.hostname=localhost
