new: manual gateway routing

--- a/ApiDiscoveryService/src/main/resources/application.properties
+++ b/ApiDiscoveryService/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=ApiDiscoveryService
 server.port=8020
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
-spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+#spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 eureka.instance.hostname=localhost
 
+spring.cloud.gateway.server.webflux.routes[0].id=users-status-check
+spring.cloud.gateway.server.webflux.routes[0].uri = lb://AppPhotoDiscoveryUser
+spring.cloud.gateway.server.webflux.routes[0].predicates[0] =Path=/users/status/check
+spring.cloud.gateway.server.webflux.routes[0].predicates[1] Method=GET
+spring.cloud.gateway.server.webflux.routes[0].filters[0]=RemoveRequestHeader=Cookie
