--- a/AppPhotoDiscoveryUser/src/main/resources/application.properties
+++ b/AppPhotoDiscoveryUser/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=AppPhotoDiscoveryUser
-server.port=0
+server.port=${PORT:0}
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
 eureka.instance.hostname=localhost
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
