--- a/ApiDiscoveryService/src/main/resources/application.properties
+++ b/ApiDiscoveryService/src/main/resources/application.properties
@@ -5,11 +5,11 @@ eureka.instance.hostname=localhost
 
 #manual gateway configuration - /users/status/check this path works because of filter[1]
 spring.cloud.gateway.server.webflux.routes[0].id=users-status-check
-spring.cloud.gateway.server.webflux.routes[0].uri = lb://AppPhotoDiscoveryUser
-spring.cloud.gateway.server.webflux.routes[0].predicates[0] =Path=/AppPhotoDiscoveryUser/users/status/check
+spring.cloud.gateway.server.webflux.routes[0].uri = lb://user-ms
+spring.cloud.gateway.server.webflux.routes[0].predicates[0] =Path=/user-ms/users/status/check
 spring.cloud.gateway.server.webflux.routes[0].predicates[1] Method=GET
 spring.cloud.gateway.server.webflux.routes[0].filters[0]=RemoveRequestHeader=Cookie
-spring.cloud.gateway.server.webflux.routes[0].filters[1]=RewritePath=/AppPhotoDiscoveryUser/(?<segment>.*),/$\{segment}
+spring.cloud.gateway.server.webflux.routes[0].filters[1]=RewritePath=/user-ms/(?<segment>.*),/$\{segment}
 
 #auto configuration of gateway
 #spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
