--- a/AppPhotoDiscoveryUser/src/main/resources/application.properties
+++ b/AppPhotoDiscoveryUser/src/main/resources/application.properties
@@ -1,6 +1,17 @@
-spring.application.name=AppPhotoDiscoveryUser
-server.port=${PORT:0}
+spring.application.name=user-ms
+#server.port=${PORT:0}
+server.port=6999
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+#database connection
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
