--- a/ApiDiscoveryService/src/main/resources/application.properties
+++ b/ApiDiscoveryService/src/main/resources/application.properties
@@ -11,5 +11,12 @@ spring.cloud.gateway.server.webflux.routes[0].predicates[1] Method=GET
 spring.cloud.gateway.server.webflux.routes[0].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.server.webflux.routes[0].filters[1]=RewritePath=/user-ms/(?<segment>.*),/$\{segment}
 
+
+spring.cloud.gateway.server.webflux.routes[1].id=h2-console
+spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/h2-console/**
+spring.cloud.gateway.server.webflux.routes[1].filters[0]=RewritePath=/h2-console/(?<segment>.*), /$\{segment}
+
+
 #auto configuration of gateway
 #spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
